user_profile: Fix left overflow clipping for deactivated icon.

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -474,7 +474,6 @@ ul.popover-group-menu-member-list {
     }
 
     .deactivated-user-icon {
-        margin: -1px;
         vertical-align: middle;
     }
 
